{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 48,
  "lineage": "1c66e5c7-4652-cf95-fa3b-7cd51c3e4632",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "eksmachine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:724772096499:instance/i-080210df39f07bf9f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080210df39f07bf9f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0689bc0785a56c0fe",
            "private_dns": "ip-10-0-1-69.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a4242d1c42a517e4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0303e95b2bad5fc3a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e42aa003dfeae16e",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0303e95b2bad5fc3a"
            ]
          },
          "dependencies": [
            "aws_security_group.webdep_sg",
            "aws_subnet.pubsubnet",
            "aws_vpc.ekcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwmy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772096499:internet-gateway/igw-04ac9c11e45fd6484",
            "id": "igw-04ac9c11e45fd6484",
            "owner_id": "724772096499",
            "tags": {
              "Name": "gatewayterraform"
            },
            "tags_all": {
              "Name": "gatewayterraform"
            },
            "vpc_id": "vpc-062a24735e31a5de4"
          },
          "dependencies": [
            "aws_vpc.ekcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772096499:route-table/rtb-05dbc875f53769291",
            "id": "rtb-05dbc875f53769291",
            "owner_id": "724772096499",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ac9c11e45fd6484",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetabledeploy"
            },
            "tags_all": {
              "Name": "routetabledeploy"
            },
            "timeouts": null,
            "vpc_id": "vpc-062a24735e31a5de4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igwmy",
            "aws_vpc.ekcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "allm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079a1cb614682298d",
            "route_table_id": "rtb-05dbc875f53769291",
            "subnet_id": "subnet-0e42aa003dfeae16e"
          },
          "dependencies": [
            "aws_internet_gateway.igwmy",
            "aws_route_table.routetb",
            "aws_subnet.pubsubnet",
            "aws_vpc.ekcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772096499:security-group/sg-084319fe635b28a72",
            "description": "Allow access to control plane",
            "egress": [],
            "id": "sg-084319fe635b28a72",
            "ingress": [],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "724772096499",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-062a24735e31a5de4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ekcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webdep_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772096499:security-group/sg-0303e95b2bad5fc3a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0303e95b2bad5fc3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "webdeb-sg",
            "name_prefix": "",
            "owner_id": "724772096499",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-062a24735e31a5de4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ekcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772096499:subnet/subnet-04dd32cdf7f5537e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dd32cdf7f5537e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772096499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatelicsubnet"
            },
            "tags_all": {
              "Name": "privatelicsubnet"
            },
            "vpc_id": "vpc-062a24735e31a5de4"
          },
          "dependencies": [
            "aws_vpc.ekcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772096499:subnet/subnet-0e42aa003dfeae16e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e42aa003dfeae16e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772096499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet"
            },
            "tags_all": {
              "Name": "publicsubnet"
            },
            "vpc_id": "vpc-062a24735e31a5de4"
          },
          "dependencies": [
            "aws_vpc.ekcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ekcvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772096499:vpc/vpc-062a24735e31a5de4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-087b16a30a5ad1cc3",
            "default_route_table_id": "rtb-0ac1df6356b6269ce",
            "default_security_group_id": "sg-0b38ebe3d4f2919b6",
            "dhcp_options_id": "dopt-04d85d20e4fb75592",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062a24735e31a5de4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac1df6356b6269ce",
            "owner_id": "724772096499"
          }
        }
      ]
    }
  ]
}